mockups/html/v2/css/bootstrap-custom.css
body {
    font-family: "HelveticaNeue", "Arial", sans-serif;
    overflow: hidden;
}


/* I like this on headings */
h1, h2, h3, h4, h5, h6 {
    text-rendering: optimizeLegibility;
    font-weight: normal;
}


/* Remove outline for firefox. TODO: Check accessibility implication */
/* Screws up a bunch of stuff - target this better */
a {
/*   outline: 0 !important;*/
}

/* Line height adjustments screw up in firefox - hope it's fixed upstream */
.glyphicon:before {
    line-height: 1.2em;
    vertical-align: text-top;
}

